force-app/main/default/objects/vlocity_cmt__AccountProductRollup__c/fields/vlocity_cmt__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AccountId__c</fullName>
    <description>Stores the Account Id for which the rollup quantity is stored.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Product Rollups</relationshipLabel>
    <relationshipName>AccountProductRollups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>