force-app/main/default/objects/vlocity_cmt__AccountProductRollup__c/fields/vlocity_cmt__ProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Product Id for which the rollup quantity is stored.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Account Product Rollups</relationshipLabel>
    <relationshipName>AccountProductRollups</relationshipName>
    <type>Lookup</type>
</CustomField>